add some script

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/Avata - Chibi.jpg">
 
         <!-- * Style -->
         <link rel="stylesheet" href="assets/css/style.css">
@@ -20,11 +21,12 @@
             </button>
             <nav id="nav-bar">
                 <a href="#" class="nav-item">Home</a>
-                <a href="#" class="nav-item">Services</a>
+                <a onclick="openLink('https://facebook.com', true)" class="nav-item">Services</a>
                 <a href="#" class="nav-item">Resume</a>
-                <a href="#" class="nav-item">Work</a>
-                <a href="#" class="nav-item">Contact</a>
-                <button class="btn-outline" id="hire-me">Hire Me</button>
+                <a onclick="openLink('https://github.com', true)" class="nav-item">Work</a>
+                <a onclick="openLink('https://facebook.com', true)" class="nav-item">Contact</a>
+                <button onclick="openLink('https://facebook.com', true)" class="btn-outline" id="hire-me">Hire
+                    Me</button>
             </nav>
         </header>
 
