--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Portfolio</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/Avata - Chibi.jpg">
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
         <!-- * Style -->
         <link rel="stylesheet" href="assets/css/style.css">
